k8s/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uniswap-service
spec:
  type: NodePort
  selector:
    app: uniswap
  ports:
    - port: 8080
      targetPort: 3000
      nodePort: 30007
